--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.maximum-pool-size=10
-
-spring.jpa.hibernate.ddl-auto=create
+#update - обновление базы данных, create - перезаписывание базы данных
+spring.jpa.hibernate.ddl-auto=update
+#выводит тела запросов к Ѕƒ в консоль
 spring.jpa.show-sql=true
 
