--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 #выводит тела запросов к БД в консоль
 spring.jpa.show-sql=true
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+
