--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=12344321
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.connectionTimeout=300000
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.minimum-idle=3
